# slugaas

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml  test.yml
src/: lib.rs  main.rs
tests/: suggestions.hurl
