[package]
name = "spicy-scarlet-slug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.4"
angry-purple-tiger = "0.1.0"
sled = "0.34"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
